5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1724_2528.log
== TEST (2019-05-14 11:24:22) 
-- CODE:
n = int(input("Insira um numero:"))


s = 0
cont = 0

while(n > 0):
	s = n%10
	cont = cont + 1
print(cont)
-- OUTPUT:
4 0.7071
5 0.7265
6 0.5774
7 0.6959
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:24:36) 
-- CODE:
n = int(input("Insira um numero:"))


s = 0
cont = 0

while(n > 0):
	s = n%10
	cont = cont + 1
print(cont)
-- OUTPUT:
4 0.7071
5 0.7265
6 0.5774
7 0.6959
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:24:46) 
-- CODE:
n = int(input("Insira um numero:"))


s = 0
cont = 0

while(n > 0):
	s = n%10
	cont = cont + 1
	print(cont)
-- OUTPUT:
4 0.7071
5 0.7265
6 0.5774
7 0.6959
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:25:14) 
-- CODE:
n = int(input("Insira um numero:"))


s = 0
cont = 0

while(n > 1):
	s = n%10
	cont = cont + 1
	print(cont)
-- OUTPUT:
4 0.7071
5 0.7265
6 0.5774
7 0.6959
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:28:13) 
-- CODE:
n = int(input("Insira um numero:"))

n = n%10
s = 0
cont = 0

while(n > 0):
	s = n%10
	cont = cont + 1
	print(cont)
-- OUTPUT:
4 0.7071
5 0.7265
6 0.5774
7 0.6959
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:29:03) 
-- CODE:
n = int(input("Insira um numero:"))


s = 0
cont = 0

while(n > 0):
	s = n%10
	cont = cont + 1
	n = n % 10
	print(cont)
-- OUTPUT:
4 0.7071
5 0.7265
6 0.5774
7 0.6959
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:29:11) 
-- CODE:
n = int(input("Insira um numero:"))


s = 0
cont = 0

while(n > 1):
	s = n%10
	cont = cont + 1
	n = n % 10
	print(cont)
-- OUTPUT:
4 0.7071
5 0.7265
6 0.5774
7 0.6959
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:29:34) 
-- CODE:
n = int(input("Insira um numero:"))

n = n
s = 0
cont = 0

while(n > 1):
	s = n%10
	cont = cont + 1
	n = n % 10
	print(cont)
-- OUTPUT:
4 0.7071
5 0.7265
6 0.5774
7 0.6959
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-17 17:54:21) 
-- CODE:
num = int(input("Insira um numero:"))

# Changed num variable to string, 
# and calculated the length (number of digits)
order = len(str(num))

# initialize sum
sum = 0

# find the sum of the cube of each digit
temp = num
while temp > 0:
   digit = temp % 10
   sum += digit ** order
   temp //= 10

# display the result
if num == sum:
   print(num,"is an Armstrong number")
else:
   print(num,"is not an Armstrong number")
-- EXECUTION TIME:
0.199112
-- TEST CASE 1:
---- input:
0
1
153
-1
---- correct output:
ARMSTRONG
ARMSTRONG
ARMSTRONG
---- user output:
0 is an Armstrong number
-- TEST CASE 2:
---- input:
100
101
102
103
-1
---- correct output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
---- user output:
100 is not an Armstrong number
-- TEST CASE 3:
---- input:
1634
1635
8208
8209
-1
---- correct output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
---- user output:
1634 is an Armstrong number
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 17:54:44) 
-- CODE:
num = int(input("Insira um numero:"))

# Changed num variable to string, 
# and calculated the length (number of digits)
order = len(str(num))

# initialize sum
sum = 0

# find the sum of the cube of each digit
temp = num
while temp > 0:
   digit = temp % 10
   sum += digit ** order
   temp //= 10

# display the result
if num == sum:
   print(num,"ARMSTRONG")
else:
   print(num,"NAO ARMSTRONG")
-- OUTPUT:
0 ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 17:54:57) 
-- CODE:
num = int(input("Insira um numero:"))

# Changed num variable to string, 
# and calculated the length (number of digits)
order = len(str(num))

# initialize sum
sum = 0

# find the sum of the cube of each digit
temp = num
while temp > 0:
   digit = temp % 10
   sum += digit ** order
   temp //= 10

# display the result
if num == sum:
   print(num,"ARMSTRONG")
else:
   print(num,"NAO ARMSTRONG")
-- OUTPUT:
0 ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-17 17:55:09) 
-- CODE:
num = int(input("Insira um numero:"))

# Changed num variable to string, 
# and calculated the length (number of digits)
order = len(str(num))

# initialize sum
sum = 0

# find the sum of the cube of each digit
temp = num
while temp > 0:
   digit = temp % 10
   sum += digit ** order
   temp //= 10

# display the result
if num == sum:
   print("ARMSTRONG")
else:
   print("NAO ARMSTRONG")
-- EXECUTION TIME:
0.205868
-- TEST CASE 1:
---- input:
0
1
153
-1
---- correct output:
ARMSTRONG
ARMSTRONG
ARMSTRONG
---- user output:
ARMSTRONG
-- TEST CASE 2:
---- input:
100
101
102
103
-1
---- correct output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
---- user output:
NAO ARMSTRONG
-- TEST CASE 3:
---- input:
1634
1635
8208
8209
-1
---- correct output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
---- user output:
ARMSTRONG
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-17 17:55:11) 
-- CODE:
num = int(input("Insira um numero:"))

# Changed num variable to string, 
# and calculated the length (number of digits)
order = len(str(num))

# initialize sum
sum = 0

# find the sum of the cube of each digit
temp = num
while temp > 0:
   digit = temp % 10
   sum += digit ** order
   temp //= 10

# display the result
if num == sum:
   print("ARMSTRONG")
else:
   print("NAO ARMSTRONG")
-- EXECUTION TIME:
0.176699
-- TEST CASE 1:
---- input:
0
1
153
-1
---- correct output:
ARMSTRONG
ARMSTRONG
ARMSTRONG
---- user output:
ARMSTRONG
-- TEST CASE 2:
---- input:
100
101
102
103
-1
---- correct output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
---- user output:
NAO ARMSTRONG
-- TEST CASE 3:
---- input:
1634
1635
8208
8209
-1
---- correct output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
---- user output:
ARMSTRONG
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-17 17:55:43) 
-- CODE:
num = int(input("Insira um numero:"))

# Changed num variable to string, 
# and calculated the length (number of digits)
order = len(str(num))

# initialize sum
Tum = 0

# find the sum of the cube of each digit
temp = num
while temp > 0:
   digit = temp % 10
   Tum += digit ** order
   temp //= 10

# display the result
if num == Tum:
   print("ARMSTRONG")
else:
   print("NAO ARMSTRONG")
-- EXECUTION TIME:
0.169716
-- TEST CASE 1:
---- input:
0
1
153
-1
---- correct output:
ARMSTRONG
ARMSTRONG
ARMSTRONG
---- user output:
ARMSTRONG
-- TEST CASE 2:
---- input:
100
101
102
103
-1
---- correct output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
---- user output:
NAO ARMSTRONG
-- TEST CASE 3:
---- input:
1634
1635
8208
8209
-1
---- correct output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
---- user output:
ARMSTRONG
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 17:55:44) 
-- CODE:
num = int(input("Insira um numero:"))

# Changed num variable to string, 
# and calculated the length (number of digits)
order = len(str(num))

# initialize sum
Tum = 0

# find the sum of the cube of each digit
temp = num
while temp > 0:
   digit = temp % 10
   Tum += digit ** order
   temp //= 10

# display the result
if num == Tum:
   print("ARMSTRONG")
else:
   print("NAO ARMSTRONG")
-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-17 17:55:45) 
-- CODE:
num = int(input("Insira um numero:"))

# Changed num variable to string, 
# and calculated the length (number of digits)
order = len(str(num))

# initialize sum
Tum = 0

# find the sum of the cube of each digit
temp = num
while temp > 0:
   digit = temp % 10
   Tum += digit ** order
   temp //= 10

# display the result
if num == Tum:
   print("ARMSTRONG")
else:
   print("NAO ARMSTRONG")
-- EXECUTION TIME:
0.126526
-- TEST CASE 1:
---- input:
0
1
153
-1
---- correct output:
ARMSTRONG
ARMSTRONG
ARMSTRONG
---- user output:
ARMSTRONG
-- TEST CASE 2:
---- input:
100
101
102
103
-1
---- correct output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
---- user output:
NAO ARMSTRONG
-- TEST CASE 3:
---- input:
1634
1635
8208
8209
-1
---- correct output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
---- user output:
ARMSTRONG
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 17:55:48) 
-- CODE:
num = int(input("Insira um numero:"))

# Changed num variable to string, 
# and calculated the length (number of digits)
order = len(str(num))

# initialize sum
Tum = 0

# find the sum of the cube of each digit
temp = num
while temp > 0:
   digit = temp % 10
   Tum += digit ** order
   temp //= 10

# display the result
if num == Tum:
   print("ARMSTRONG")
else:
   print("NAO ARMSTRONG")
-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 17:55:52) 
-- CODE:
num = int(input("Insira um numero:"))

# Changed num variable to string, 
# and calculated the length (number of digits)
order = len(str(num))

# initialize sum
Tum = 0

# find the sum of the cube of each digit
temp = num
while temp > 0:
   digit = temp % 10
   Tum += digit ** order
   temp //= 10

# display the result
if num == Tum:
   print("ARMSTRONG")
else:
   print("NAO ARMSTRONG")
-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 18:44:29) 
-- CODE:
num = int(input("Digite um numero:"))

d = 10
cont = 0


num = (num//d)%10
print(num)
-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 18:44:38) 
-- CODE:
num = int(input("Digite um numero:"))

d = 10
cont = 0


num = (num//d)%10
print(num)
-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 18:45:20) 
-- CODE:
num = int(input("Digite um numero:"))

d = 10
cont = 1


num = num%10
print(num)
-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 18:46:47) 
-- CODE:
num = int(input("Digite um numero:"))

d = 10
cont = 1

while(num>10):
	num = (num//d)%10
	cont = cont + 1
	print(num)
-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 18:47:00) 
-- CODE:
num = int(input("Digite um numero:"))

d = 10
cont = 1

while(num>10):
	num = (num//d)%10
	cont = cont + 1
	print(cont)
-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 18:47:16) 
-- CODE:
num = int(input("Digite um numero:"))

d = 10
cont = 1

while(num>9):
	num = (num//d)%10
	cont = cont + 1
	print(cont)
-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 18:47:37) 
-- CODE:
num = int(input("Digite um numero:"))

d = 10
cont = 1

while(num>9):
	num = (num//d)%10
	d = d+10
	cont = cont + 1
	print(cont)
-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 18:48:34) 
-- CODE:
num = int(input("Digite um numero:"))

d = 10
cont = 1

while(num>9):
	num1 = (num//d)%10
	d = d + 10
	cont = cont + 1
	print(cont)
-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 18:48:56) 
-- CODE:
num = int(input("Digite um numero:"))

d = 10
cont = 1

while(num1>9):
	num1 = (num//d)%10
	d = d + 10
	cont = cont + 1
	print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(num1>9):
NameError: name 'num1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 18:49:08) 
-- CODE:
num = int(input("Digite um numero:"))

d = 10
cont = 1
num1 = 0

while(num1>9):
	num1 = (num//d)%10
	d = d + 10
	cont = cont + 1
	print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(num1>9):
NameError: name 'num1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 18:49:27) 
-- CODE:
num = int(input("Digite um numero:"))

d = 10
cont = 1
num1 = 0

while(num1>9):
	num1 = (num//d)%10
	d = d + 10
	cont = cont + 1
	print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(num1>9):
NameError: name 'num1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 18:49:31) 
-- CODE:
num = int(input("Digite um numero:"))

d = 10
cont = 1
num1 = num

while(num1>9):
	num1 = (num//d)%10
	d = d + 10
	cont = cont + 1
	print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(num1>9):
NameError: name 'num1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 18:52:47) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1


while(num>9):
	num = num//10
	cont = cont + 1
	print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(num1>9):
NameError: name 'num1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 18:52:54) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1


while(num>9):
	num = num//10
	cont = cont + 1
	print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(num1>9):
NameError: name 'num1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 18:52:59) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1


while(num>9):
	num = num//10
	cont = cont + 1
	print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(num1>9):
NameError: name 'num1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 19:20:21) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d1 = num%10
du = num//cont

while(num>9):
	num = num//10
	cont = cont + 1
	print(cont)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(num1>9):
NameError: name 'num1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 19:20:46) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d1 = num%10
du = num**cont

while(num>9):
	num = num//10
	cont = cont + 1
	print(cont)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(num1>9):
NameError: name 'num1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 19:21:06) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d1 = num%10
du = num//10**cont

while(num>9):
	num = num//10
	cont = cont + 1
	print(cont)
print(du)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(num1>9):
NameError: name 'num1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 19:21:27) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d1 = num%10


while(num>9):
	num = num//10
	cont = cont + 1
	du = num//10**cont
	print(cont)
print(du)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(du)
NameError: name 'du' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 19:21:39) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d1 = num%10


while(num>9):
	num = num//10
	cont = cont + 1
	du = num//10**(cont-1)
	print(cont)
print(du)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(du)
NameError: name 'du' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 19:26:17) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d = 10

while(num>9):
	num = num//10
	cont = cont + 1
	du = num//10**cont
	d = d*10
	dig1 = num//d
	print(cont)
	print(dig1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(du)
NameError: name 'du' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 19:33:22) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d = 10

while(num>9):
	num = num//10
	cont = cont + 1
	du = num//10**cont
	d = d*10
	dig1 = num//d
	print(cont)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(du)
NameError: name 'du' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 20:39:17) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d = 10

while(num>9):
	num = num//10
	cont = cont + 1
	du = num//(10**cont)
	d = d*10
	dig1 = num//d
	print(cont)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(du)
NameError: name 'du' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 20:39:27) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d = 10

while(num>9):
	num = num//10
	cont = cont + 1
	du = num//(10**cont)
	d = d*10
	dig1 = num//d
	print(cont)
	print(du)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(du)
NameError: name 'du' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 20:39:37) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d = 10

while(num>9):
	num = num//10
	cont = cont + 1
	du = num//10
	d = d*10
	dig1 = num//d
	print(cont)
	print(du)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(du)
NameError: name 'du' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 20:39:46) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d = 10

while(num>9):
	num = num//10
	cont = cont + 1
	du = num//10
	d = d*10
	dig1 = num//d
	
	print(du)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(du)
NameError: name 'du' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 20:40:29) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d = 10

while(num>9):
	num = num//10
	cont = cont + 1
	du = num//10
	d = d*10
	dig1 = num//d
	print(cont)
	print(dig1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(du)
NameError: name 'du' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 20:40:45) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d = 10

while(num>9):
	num = num//10
	cont = cont + 1
	du = num//10
	d = d*10
	dig1 = num//(d**cont)
	print(cont)
	print(dig1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(du)
NameError: name 'du' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-17 20:41:18) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d = 10

while(num>9):
	dig1 = num//(d**cont)
	num = num//10
	cont = cont + 1
	du = num//10
	d = d*10
	
	print(cont)
	print(dig1)
	
-- EXECUTION TIME:
0.117351
-- TEST CASE 1:
---- input:
0
1
153
-1
---- correct output:
ARMSTRONG
ARMSTRONG
ARMSTRONG
---- user output:

-- TEST CASE 2:
---- input:
100
101
102
103
-1
---- correct output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
---- user output:
2
10
3
0
-- TEST CASE 3:
---- input:
1634
1635
8208
8209
-1
---- correct output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
---- user output:
2
163
3
0
4
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 20:41:18) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d = 10

while(num>9):
	dig1 = num//(d**cont)
	num = num//10
	cont = cont + 1
	du = num//10
	d = d*10
	
	print(cont)
	print(dig1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(du)
NameError: name 'du' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 20:41:51) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d = 10
dig1 =  (num//1000)%10
while(num>9):
	num = num//10
	cont = cont + 1
	du = num//10
	d = d*10
	
	print(cont)
print(dig1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(du)
NameError: name 'du' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 20:42:09) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d = 10
dig1 =  (num//1000)%10
while(num>9):
	num = num//10
	cont = cont + 1
	du = num//10
	d = d*10
	print(cont)
print(d)
	
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 20:42:42) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d = 10

while(num>9):
	num = num//10
	cont = cont + 1
	du = num//10
	d = d*10
	dig1 =  (num//d)%10
	print(cont)
	print(dig1)
	
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 20:43:02) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d = 10
dig1 = (num//d)%10
while(num>9):
	num = num//10
	cont = cont + 1
	du = num//10
	d = d*10
	
	print(cont)
	print(dig1)
	
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 20:43:14) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d = 10
dig1 = (num//d)%10
while(num>9):
	num = num//10
	cont = cont + 1
	du = num//10
	d = d*10
	
	print(cont)
print(dig1)
	
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 20:43:57) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d = 10

while(num>9):
	num = num//10
	cont = cont + 1
	du = num//10
	d = d*10

	print(cont)
dig1 = (num//d)%10
print(dig1)
	
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 20:44:11) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d = 10

while(num>9):
	num = num//10
	cont = cont + 1
	du = num//10
	d = d*10

	print(cont)
d = d
print(d)
	
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 20:44:18) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d = 10

while(num>9):
	num = num//10
	cont = cont + 1
	du = num//10
	d = d*10

	print(cont)

print(d)
	
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 20:44:58) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d = 10

while(num>9):
	num = num//10
	cont = cont + 1
	du = num//10
	d = (d*10)/10

	print(cont)

print(d)
	
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 20:47:04) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d = 10

while(num>9):
	num = num//10
	cont = cont + 1
	du = num//10
	d = d*10
	dig1 = num//d
	print(cont)
	print(d)
	
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 20:47:23) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d = 10

while(num>9):
	num = num//10
	cont = cont + 1
	du = num//10
	d = d*10
	dig1 = num//d

	print(dig1)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 20:47:39) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d = 10

while(num>9):
	num = num//10
	cont = cont + 1
	du = num//10
	d = d*10
	dig1 = num//d

	print(dig1)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 20:48:05) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d = 10

while(num>9):
	num = num//10
	cont = cont + 1
	du = num//10
	dig1 = num//d
	d = d*10

	print(dig1)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 20:48:29) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d = 10

while(num>9):
	num = num//10
	cont = cont + 1
	du = num//10
	d = d*10
dig1 = num//d	
print(dig1)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 20:48:43) 
-- CODE:
num = int(input("Digite um numero:"))

cont = 1
d = 10
dig1 = num//d
while(num>9):
	num = num//10
	cont = cont + 1
	du = num//10
	d = d*10

print(dig1)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 20:49:41) 
-- CODE:
num = int(input("Digite um numero:"))
num1 = num
cont = 1
d = 10

while(num>9):
	num = num//10
	cont = cont + 1
	du = num//10
	d = d*10
	dig1 = num1//d
	print(dig1)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 20:49:56) 
-- CODE:
num = int(input("Digite um numero:"))
num1 = num
cont = 1
d = 10

while(num>9):
	num = num//10
	cont = cont + 1
	du = num//10
	d = d*10
	dig1 = num1//(d**cont)
	print(dig1)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 20:50:14) 
-- CODE:
num = int(input("Digite um numero:"))
num1 = num
cont = 1
d = 10

while(num>9):
	num = num//10
	cont = cont + 1
	du = num//10
	d = d*10
	dig1 = num1//(d**(cont-1))
	print(dig1)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
